--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+Tetrarcade.build/
+Tetrarcade.dist/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
